MOD Track Application link to Find Similar Applicants

--- a/gui/search_college.html
+++ b/gui/search_college.html
@@ -177,8 +177,8 @@
                             <button class="list-group-item list-group-item-action">
                                 <!-- data should be included inside h5 tag -->
                                 <h5 class="college-name">State University of New York, Albany</h5>
-                                <!-- replace # with Track Application menu end point  -->
-                                <a href="#">Track Application</a>
+                                <!-- use this a tag as a button. once the user clicks this a tag, the modal with the list of similar students will pop up.  -->
+                                <a href="#">Find Similar Applicants</a>
                                 <!-- data should be included inside h5 tag -->
                                 <h5>NY</h5>
                             </button>
@@ -201,7 +201,7 @@
                             </div>
                             <button class="list-group-item list-group-item-action">
                                 <h5 class="college-name">State University of New York, Stony Brook</h5>
-                                <a href="#">Track Application</a>
+                                <a href="#">Find Similar Applicants</a>
                                 <h5>NY</h5>
                             </button>
                             <div class="item-info">
