--- a/gui/search_college.html
+++ b/gui/search_college.html
@@ -287,7 +287,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="list-group-item list-group-item-action">
+                            <div class="list-group-item list-group-item-action" style="z-index: 0;">
                                 <!-- data should be included inside h5 tag -->
                                 <h5 class="college-name">State University of New York, Albany</h5>
                                 <!-- once the user clicks this button tag, the modal with the list of similar students will pop up.  -->
@@ -312,7 +312,7 @@
                                     </tr>
                                 </table>
                             </div>
-                            <div class="list-group-item list-group-item-action">
+                            <div class="list-group-item list-group-item-action" style="z-index: 0;">
                                 <h5 class="college-name">State University of New York, Stony Brook</h5>
                                 <button class="find-similar-applicants" data-toggle="modal" data-target="#find-similar-applicants-modal">Find Similar Applicants</button>
                                 <h5>NY</h5>
