--- a/gui/search_college.html
+++ b/gui/search_college.html
@@ -302,7 +302,7 @@
                                         <td><b>Public</b><br><label>Institution</label></td>
                                         <td><b>50%</b><br><label>Admission rate</label></td>
                                         <td><b>90%</b><br><label>Completion rate</label></td>
-                                        <td></td>
+                                        <td class="reco-score"><b>-</b><br><label>Recommendation score</label></td>
                                     </tr>
                                     <tr>
                                         <td><b>$20000</b><br><label>Cost of attendance</label></td>
@@ -323,7 +323,7 @@
                                         <td><b>Public</b><br><label>Institution</label></td>
                                         <td><b>50%</b><br><label>Admission rate</label></td>
                                         <td><b>90%</b><br><label>Completion rate</label></td>
-                                        <td></td>
+                                        <td class="reco-score"><b>-</b><br><label>Recommendation score</label></td>
                                     </tr>
                                     <tr>
                                         <td><b>$20000</b><br><label>Cost of attendance</label></td>
