ADD high school name

--- a/gui/my_page.html
+++ b/gui/my_page.html
@@ -188,10 +188,11 @@
                                                 <div class="modal-dialog" role="document">
                                                     <div class="modal-content">
                                                         <div class="modal-header">
-                                                        <h5 class="modal-title" id="find-similar-high-schools-modal-label">Similar high schools</h5>
-                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                            <span aria-hidden="true">&times;</span>
-                                                        </button>
+                                                            <!-- add the user's high school name that is currently stored in DB inside span tag below-->
+                                                            <h5 class="modal-title" id="find-similar-high-schools-modal-label">Similar high schools to <span>Stony Brook High School</span></h5>
+                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <span aria-hidden="true">&times;</span>
+                                                            </button>
                                                         </div>
                                                         <div class="modal-body">
                                                             <!-- Initially, there should be no tags inside the tag below. -->
