--- a/gui/my_page.html
+++ b/gui/my_page.html
@@ -280,7 +280,7 @@
                                     <tr>
                                         <td><b>GPA</b></td>
                                         <td>
-                                            <input type="number" placeholder="< 4.0" class="form-control shadow-none profile-number-input" id="profile-gpa" max="4" step=0.01>
+                                            <input type="number" placeholder="<= 4.0" class="form-control shadow-none profile-number-input" id="profile-gpa" max="4" step=0.01>
                                         </td>
                                     </tr>
                                 </tbody>
