--- a/gui/my_page.html
+++ b/gui/my_page.html
@@ -53,7 +53,7 @@
                                         <td class="profile-username"><h5><b>DRAX</b></h5></td>
                                     </tr>
                                     <tr>
-                                        <td class="flex"> <b>Class of</b><input type="number" placeholder="< 2027" class="form-control shadow-none profile-number-input" id="profile-college-class" max="2027"></td>
+                                        <td class="flex"> <b>Class of</b><input type="number" placeholder="<= 2027" class="form-control shadow-none profile-number-input" id="profile-college-class" max="2027"></td>
                                     </tr>
                                     <tr>
                                         <td><b>Password</b></td>
