--- a/gui/track_application.html
+++ b/gui/track_application.html
@@ -57,8 +57,8 @@
                                         <tr>
                                             <td id="wrap-college-class"><b>College class</b>
                                                 <div class="wrap-filter">
-                                                    <input type="number" class="form-control shadow-none" id="college-class-min" placeholder="<= 2027" max="2027">
-                                                    - <input type="number" class="form-control shadow-none" id="college-class-max" placeholder="<= 2027" max="2027">
+                                                    <input type="number" class="form-control shadow-none" id="college-class-min" placeholder="<= 2027" min="0" max="2027">
+                                                    - <input type="number" class="form-control shadow-none" id="college-class-max" placeholder="<= 2027" min="0" max="2027">
                                                 </div>
                                             </td>
                                             <td id="wrap-application-status"><b>Application status</b>
